# pyorcid-checksum

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app-pytest.yml
src/: checksum.py
src/pyorcid_checksum/: __init__.py  checksum.py  fixer.py
tests/: test_sample.py
tests/data/: orcid_test_data.json
