[tool.poetry]
name = "pyorcid-checksum"
version = "0.1.0"
description = "A simple Python Library for checking the validilty of ORCID and ORCID IDs"
authors = ["kenlhlui <kenlh.lui@utoronto.ca>"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
